# genai-assisted-darktable

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO_ROTATION.md  fetch_ddg.py  fetch_dt_docs.py  main.py  pyproject.toml
.agents/.planning_gsd_skill/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md
.agents/generalizer-across-CLIs/: AGENTS.md
.agents/knowledge-base/: cropping.md  index.md  landscape.md  macro.md  wildlife.md
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.gemini/: gsd-file-manifest.json  settings.json
.gemini/agents/: gsd-ai-researcher.md  (+15 more)
.parity-sync-20260501_173113/: REPORT.md  plan.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
dt_ai/: ai.py  discovery.py  gui.py  main.py  parity.py  processor.py  research.py  state.py  xmp.py
tests/: test_agent_next.py  test_ai.py  test_ai_prompts.py  test_cli.py  test_cli_state.py  test_clipping_parity.py  test_crop_math.py  test_crop_previews.py  test_discovery.py  test_enhancer_agx.py  test_enhancer_reporting.py  test_gui.py  test_integration.py  test_metadata.py  test_multi_variation.py  test_neighbors.py  test_parity_audit.py  test_parity_docs.py  test_parity_e2e.py  test_parity_research.py  test_parity_scanner.py  test_parity_tdd.py  test_processor.py  test_promotion.py  test_skill_parameters.py  test_state.py  test_storage.py  test_synthesis.py  test_xmp.py  test_xmp_encoding.py  test_xmp_history.py  test_xmp_injection.py  test_xmp_naming.py  test_xmp_structs.py
(+314 files in other folders)
